# floyza-7drl-2023

./: .gitignore  Cargo.toml  README.org  shell.nix  todo.org
assets/: armor.xp  elemental-gun.xp  game-over.xp  grappling-hook.xp  main-menu.xp  sword.xp  you-won.xp
docs/: arch.org  hecs.org
raws/: help.txt  spawns.json
scripts/: build-web.sh  host-web.sh  usage.org
src/: blockers.rs  blueprint.rs  commands.rs  components.rs  components_serde.rs  debug.rs  equipment.rs  essence.rs  item.rs  main.rs  map.rs  mapping.rs  math.rs  messages.rs  monster.rs  player.rs  raws.rs  skill.rs  systems.rs  ui.rs  util.rs  window.rs
src/systems/: death.rs  tile_contents.rs  viewer_look.rs
src/ui/: inventory_ui.rs
src/window/: inventory.rs  message_log.rs
wasm/: index.html
