[package]
name = "floyza-7drl-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.9.1"
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git", rev = "0d2d5e6a9a8e7c7ae3710cfef85be4cab0109a27", default-features = false, features = ["opengl"] }
